<resources>
    <string name="app_name">ProjetFinal</string>

    <string name="title">Arbitrage Crawler</string>
    <string name="options">Options</string>
    <string name="propos">À propos</string>

    <string name="Binance" translatable="false">Binance</string>
    <string name="Coinbase" translatable="false">Coinbase</string>
    <string name="Kraken" translatable="false">Kraken</string>
    <string name="GateIO" translatable="false">GateIO</string>
    <string name="UpBit" translatable="false">Upbit</string>
    <string name="option_Title">Sélection des sites d\'échange possible</string>
    <string name="save">Sauvegarde</string>
    <string name="finish">Mise a jour terminée</string>
    <string name="percentGainers">Plus haut pourcentage</string>
    <string name="percentLosers">Plus grande perte</string>
    <string name="buy">Pour acheter</string>
    <string name="sell">Pour vendre</string>


</resources>